# Lennys_Wisdom

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  techspec.md
src/: config.py  server.py
src/data/: fetcher.py  interfaces.py  orchestrator.py  parser.py  store.py
src/lennys_wisdom/: __init__.py
src/models/: schemas.py
